Closed Bug 166747 Opened 23 years ago Closed 23 years ago

Crash on startup with malformed bookmarks file

Categories

(Camino Graveyard :: Bookmarks, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: sfraser_bugs, Assigned: sfraser_bugs)

Details

(Keywords: crash)

Attachments

(1 file)

If the boomarks.xml file is malformed, you get an error dialog at startup. After dismissing this dialog, the app crashes while making the first window, with a stack like: Exception: EXC_BAD_ACCESS (0x0001) Codes: KERN_PROTECTION_FAILURE (0x0002) at 0x00000000 Thread 0 Crashed: #0 0x000254a0 in BookmarksService::CreateIconForBookmark(nsIDOMElement *) #1 0x00026f88 in BookmarksService::AddMenuBookmark(NSMenu *, nsIContent *, nsIContent *, int) #2 0x00026c3c in BookmarksService::ConstructBookmarksMenu(NSMenu *, nsIContent *) #3 0x00006664 in -[MainController applicationDidFinishLaunching:]
Fix checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Attachment #97894 - Attachment mime type: text/xml → text/plain
no longer crash --get a dlg saying that there's an error with the bookmarks file, not conforming properly. vrfy fixed with 2002.09.24.12.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: