Fix for bug 166747: don't crash on startup if the boomarks.xml file is malformed.